--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body
+
 {
     color: #333;
     text-align: left;
@@ -42,3 +43,11 @@ body
 {
     padding: 1em;
 }
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+}
+
